Se agrego funcionamiento

--- a/blinkid-android-master/BlinkIDSample/BlinkID-DirectApiSample/src/main/AndroidManifest.xml
+++ b/blinkid-android-master/BlinkIDSample/BlinkID-DirectApiSample/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.microblink.blinkid.demo">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- Required for capturing photos. -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -13,6 +13,7 @@
 
     <application
         android:name="com.microblink.BlinkIdSampleApp"
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:extractNativeLibs="false"
         android:icon="@mipmap/ic_launcher"
