--- a/blinkid-android-master/BlinkIDSample/BlinkID-CustomCombinedSample/src/main/AndroidManifest.xml
+++ b/blinkid-android-master/BlinkIDSample/BlinkID-CustomCombinedSample/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.microblink.blinkid">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name="com.microblink.BlinkIdSampleApp"
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
