--- a/blinkid-android-master/BlinkIDSample/BlinkID-CustomUISample/src/main/AndroidManifest.xml
+++ b/blinkid-android-master/BlinkIDSample/BlinkID-CustomUISample/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.microblink.blinkid.demo"
     android:versionCode="1"
     android:versionName="0.6.0" >
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature android:name="android.hardware.camera" android:required="false" />
@@ -12,6 +12,7 @@
 
     <application
         android:name="com.microblink.BlinkIdSampleApp"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppTheme.FullScreen"
