--- a/blinkid-android-master/BlinkIDSample/BlinkID-ImagesSample/src/main/AndroidManifest.xml
+++ b/blinkid-android-master/BlinkIDSample/BlinkID-ImagesSample/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -16,6 +16,7 @@
         android:required="false" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:name="com.microblink.BlinkIdSampleApp"
         android:allowBackup="true"
         android:extractNativeLibs="false"
