--- a/blinkid-android-master/BlinkIDSample/BlinkID-OverlaySample/src/main/AndroidManifest.xml
+++ b/blinkid-android-master/BlinkIDSample/BlinkID-OverlaySample/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     package="com.microblink.blinkid">
 
     <uses-permission android:name="android.permission.CAMERA" />
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-feature
         android:name="android.hardware.camera"
+        android:usesCleartextTraffic="true"
         android:required="false" />
     <uses-feature
         android:name="android.hardware.camera.autofocus"
@@ -16,6 +17,7 @@
 
     <application
         android:name="com.microblink.BlinkIdSampleApp"
+        android:usesCleartextTraffic="true"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
