--- a/blinkid-android-master/BlinkIDSample/BlinkID-aMinimalSample/src/main/AndroidManifest.xml
+++ b/blinkid-android-master/BlinkIDSample/BlinkID-aMinimalSample/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1">
 
     <uses-permission android:name="android.permission.CAMERA" />
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -19,6 +19,7 @@
     <application
         android:name="com.microblink.blinkid.BlinkIdSampleApp"
         android:allowBackup="false"
+        android:usesCleartextTraffic="true"
         android:extractNativeLibs="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name">
