--- a/blinkid-android-master/BlinkIDSample/BlinkID_AllRecognizersSample/src/main/AndroidManifest.xml
+++ b/blinkid-android-master/BlinkIDSample/BlinkID_AllRecognizersSample/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.microblink.blinkid"
     android:versionCode="1"
     android:versionName="0.6.0">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
@@ -19,6 +19,7 @@
     <application
         android:name="com.microblink.BlinkIdSampleApp"
         android:allowBackup="false"
+        android:usesCleartextTraffic="true"
         android:extractNativeLibs="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -37,6 +38,16 @@
         <activity
             android:name="com.microblink.activity.DocumentVerificationActivity"
             android:theme="@style/VerificationFlowTheme" />
+
+        <activity
+            android:name="com.microblink.result.activity.fragment.ListViewActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
