--- a/blinkid-android-master/BlinkIDSample/LibUtils/build.gradle
+++ b/blinkid-android-master/BlinkIDSample/LibUtils/build.gradle
@@ -33,4 +33,15 @@ dependencies {
     implementation "androidx.appcompat:appcompat:${rootProject.ext.appCompatVersion}"
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.preference:preference:1.1.0'
+
+    //Volley
+    implementation 'com.android.volley:volley:1.1.1'
+
+    //GSON
+    implementation 'com.google.code.gson:gson:2.8.7'
+
+    //
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+
+
 }
