--- a/blinkid-android-master/BlinkIDSample/BlinkID_AllRecognizersSample/src/main/AndroidManifest.xml
+++ b/blinkid-android-master/BlinkIDSample/BlinkID_AllRecognizersSample/src/main/AndroidManifest.xml
@@ -40,14 +40,19 @@
             android:theme="@style/VerificationFlowTheme" />
 
         <activity
-            android:name="com.microblink.result.activity.fragment.ListViewActivity"
+            android:name="com.microblink.menu.ListViewActivity"
             android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+        <activity android:name="com.microblink.menu.BaseMenuActivity"/>
+        <activity android:name="com.microblink.menu.EditViewActivity"/>
+        <activity android:name="com.microblink.help.HelpActivity"/>
+        <activity android:name="com.microblink.result.activity.RecognizerBundleResultActivity"/>
+        android:usesCleartextTraffic="true"
     </application>
+
+
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 
 </manifest>
