--- a/blinkid-android-master/BlinkIDSample/LibUtils/build.gradle
+++ b/blinkid-android-master/BlinkIDSample/LibUtils/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     //
     implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
 
 }
