--- a/blinkid-android-master/BlinkIDSample/BlinkID_AllRecognizersSample/src/main/AndroidManifest.xml
+++ b/blinkid-android-master/BlinkIDSample/BlinkID_AllRecognizersSample/src/main/AndroidManifest.xml
@@ -24,17 +24,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppTheme.FullScreen">
-        <activity
-            android:name=".MenuActivity"
+
+        <activity android:name="com.microblink.menu.LoginViewActivity"
             android:label="@string/app_name"
             android:screenOrientation="sensor">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="com.microblink.activity.DocumentVerificationActivity"
             android:theme="@style/VerificationFlowTheme" />
@@ -43,10 +43,14 @@
             android:name="com.microblink.menu.ListViewActivity"
             android:label="@string/app_name">
         </activity>
+
         <activity android:name="com.microblink.menu.BaseMenuActivity"/>
         <activity android:name="com.microblink.menu.EditViewActivity"/>
         <activity android:name="com.microblink.help.HelpActivity"/>
         <activity android:name="com.microblink.result.activity.RecognizerBundleResultActivity"/>
+        <activity android:name="com.microblink.blinkid.MenuActivity"/>
+        <activity android:name="com.microblink.menu.RegisterViewActivity"/>
+
         android:usesCleartextTraffic="true"
     </application>
 
