--- a/blinkid-android-master/BlinkIDSample/BlinkID_AllRecognizersSample/src/main/AndroidManifest.xml
+++ b/blinkid-android-master/BlinkIDSample/BlinkID_AllRecognizersSample/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppTheme.FullScreen">
 
-        <activity android:name="com.microblink.menu.LoginViewActivity"
+        <activity android:name="com.microblink.menu.Validation"
             android:label="@string/app_name"
             android:screenOrientation="sensor">
             <intent-filter>
@@ -44,14 +44,21 @@
             android:label="@string/app_name">
         </activity>
 
+        <activity android:name="com.microblink.blinkid.MenuActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="sensor">
+        </activity>
+
         <activity android:name="com.microblink.menu.BaseMenuActivity"/>
         <activity android:name="com.microblink.menu.EditViewActivity"/>
         <activity android:name="com.microblink.help.HelpActivity"/>
         <activity android:name="com.microblink.result.activity.RecognizerBundleResultActivity"/>
-        <activity android:name="com.microblink.blinkid.MenuActivity"/>
         <activity android:name="com.microblink.menu.RegisterViewActivity"/>
+        <activity android:name="com.microblink.menu.LoginViewActivity"/>
+        <activity android:name="com.microblink.activity.BlinkIdActivity"/>
 
         android:usesCleartextTraffic="true"
+
     </application>
 
 
