--- a/blinkid-android-master/BlinkIDSample/LibUtils/build.gradle
+++ b/blinkid-android-master/BlinkIDSample/LibUtils/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     //
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'com.github.VishnuSivadasVS:Advanced-HttpURLConnection:1.2'
 
 }
