--- a/blinkid-android-master/BlinkIDSample/BlinkID_AllRecognizersSample/build.gradle
+++ b/blinkid-android-master/BlinkIDSample/BlinkID_AllRecognizersSample/build.gradle
@@ -29,4 +29,16 @@ dependencies {
         transitive = true
     }
     implementation project(':LibUtils')
+
+    //Volley
+    implementation 'com.android.volley:volley:1.1.1'
+
+    //GSON
+    implementation 'com.google.code.gson:gson:2.8.7'
+
+    //
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'com.github.VishnuSivadasVS:Advanced-HttpURLConnection:1.2'
 }
